--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
     "nodemailer": "^7.0.9",
+    "pdfkit": "^0.17.2",
     "winston": "^3.18.3"
   },
   "devDependencies": {
