--- a/java-attendance-service/src/main/resources/application.properties
+++ b/java-attendance-service/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 # Server Configuration
 server.port=8081
 
+# HTTP Request Size Limits (for face image uploads)
+server.tomcat.max-swallow-size=-1
+server.tomcat.max-http-form-post-size=50MB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 # Logging for XO5 Device Integration
 logging.level.com.hfims.xcan.gateway=DEBUG
 
