--- a/java-attendance-service/src/main/resources/application.properties
+++ b/java-attendance-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Server Configuration
 server.port=8081
+server.address=0.0.0.0
 
 # HTTP Request Size Limits (for face image uploads)
 server.tomcat.max-swallow-size=-1
@@ -11,4 +12,4 @@ spring.servlet.multipart.max-request-size=50MB
 logging.level.com.hfims.xcan.gateway=DEBUG
 
 # MERN Backend Integration
-mern.backend.url=http://localhost:3001
+mern.backend.url=http://143.198.150.26:5000
