Fix device.ip configuration for production deployment

--- a/java-attendance-service/src/main/resources/application.properties
+++ b/java-attendance-service/src/main/resources/application.properties
@@ -2,6 +2,14 @@
 server.port=8081
 server.address=0.0.0.0
 
+# Active Profile
+spring.profiles.active=prod
+
+# Device Configuration
+device.ip=143.198.150.26
+gateway.port=10011
+gateway.timeout=10000
+
 # HTTP Request Size Limits (for face image uploads)
 server.tomcat.max-swallow-size=-1
 server.tomcat.max-http-form-post-size=50MB
