Increase rate limit to 1000 requests per 15 minutes

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ MONGODB_URI=mongodb://localhost:27017/attendance-tracking
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRE=7d
 
+# Security Keys (IMPORTANT: Change these in production!)
+ADMIN_SETUP_KEY=admin-setup-secret-2025
+DEVELOPER_KEY=dev-secret-2025-sabs
+
 # Facility Device APIs (Update with your actual device server endpoints)
 FACILITY_1_API=http://facility1-server.com/api/attendance
 FACILITY_2_API=http://facility2-server.com/api/attendance
