--- a/client/.env.production.example
+++ b/client/.env.production.example
@@ -3,7 +3,7 @@
 
 # === WORKING CONFIGURATION (HTTPS Backend) ===
 # Backend API URL - Your secured domain
-REACT_APP_API_URL=https://sabs-backend.hefrias.ng/api
+REACT_APP_API_URL=https://sabs-backend.hefrias.ng/
 
 # App Configuration
 REACT_APP_NAME=SABS - Smart Attendance System
