--- a/java-attendance-service/src/main/resources/application.properties
+++ b/java-attendance-service/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.servlet.multipart.max-request-size=50MB
 logging.level.com.hfims.xcan.gateway=DEBUG
 
 # MERN Backend Integration
-mern.backend.url=http://143.198.150.26:5000
+mern.backend.url=http://localhost:5000
